--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   faker: ^2.1.0
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
