--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^6.0.0
   provider: ^6.0.5
   shared_preferences: ^2.0.15
+  app_links: ^3.4.1
 
 dev_dependencies:
   flutter_test:
